[package]
name = "downstage"
version = "0.1.0-alpha.0"
edition = "2024"

[dependencies]
bon = "3.8.1"
chromiumoxide_cdp = "0.8.0"
chromiumoxide_types = "0.8.0"
futures = "0.3.31"
http = "1.4.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-websockets = { version = "0.13.0", features = ["client", "rand", "ring"] }
tracing = "0.1.43"
